# ICSV

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  linux_build.sh  windows_build.bat
ICSV-app/: CMakeLists.txt  app.cpp  app.hpp
ICSV-app/assets/: BillboardMat.material  CubeMat.material  Font.material  Material.material  Sans.material  Sfx.material  arial.material
ICSV-app/scripts/: Cube.mesh  things.material
ICSV-app/src/: CMakeLists.txt  app.cpp  app.hpp  chart.cpp  chart.hpp  entity_manager.cpp  entity_manager.hpp  icsv_entity.cpp  icsv_entity.hpp  main.cpp  material_factory.cpp  material_factory.hpp  movable_text.cpp  movable_text.h  movable_text.hpp  raycaster.hpp  statistics.cpp  statistics.hpp
ICSV-app/src/gui/: CMakeLists.txt  gui.cpp  gui.hpp  imguifilebrowser.hpp
include/: CMakeLists.txt
include/gui/: CMakeLists.txt  gui.cpp
include/icsv/: CMakeLists.txt
include/icsv/detector/: CMakeLists.txt  architecture_holder.hpp  detector.hpp  detector_manager.hpp  detector_report.hpp  evaluation_center.hpp  report_center.hpp  smell_evaluator.hpp
include/icsv/detector/arch/: CMakeLists.txt  architecture_data.hpp  architecture_holder.hpp
include/utils/: CMakeLists.txt  utils.hpp
libs/: CMakeLists.txt  circular_dependency_smell.cpp  dependency_count_smell.cpp  function_overload_smell.cpp  large_file_smell.cpp  long_identifier_smell.cpp  method_args_smell.cpp  method_literals_smell.cpp  method_locals_smell.cpp  nested_scopes_smell.cpp  range_based_smell_eval.cpp  range_based_smell_eval.hpp
libs/detector_impls/: CMakeLists.txt  circular_dependency_det.cpp  cyclomatic_complexity.cpp  dependency_count_det.cpp  function_overload_det.cpp  god_line.cpp  inappropriate_intimacy.cpp  large_class_det.cpp  large_file_det.cpp  long_function_det.cpp  long_identifier_det.cpp  method_args_det.cpp  method_literals_det.cpp  method_locals_det.cpp  naming_conventions_det.cpp  nested_scopes_det.cpp  redundant_protected_det.cpp  virtual_destructor_det.cpp
libs/evaluator_impls/: CMakeLists.txt  arg_based_eval.cpp  arg_based_eval.hpp  range_based_eval.cpp  range_based_eval.hpp  regex_based_eval.cpp  regex_based_eval.hpp
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.cpp
src/detector/: CMakeLists.txt  architecture_holder.cpp  detector.cpp  detector_manager.cpp  detector_report.cpp  evaluation_center.cpp  report_center.cpp  smell_evaluator.cpp
src/detector/arch/: CMakeLists.txt  architecture_holder.cpp
src/utils/: CMakeLists.txt  utils.cpp
unit-tests/: CMakeLists.txt  DetectorsConfig.json  arch_deserialization.cpp  gg.json  graph.json  graphme2.json  icsv_no_external.json  large_file_detecting.cpp  smell_detectors.cpp  test.json  tests.cpp
